# Copyright (c) 2015, Pivotal Software, Inc. All Rights Reserved.

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpopt/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpdbcost/include)
add_library(naucrates SHARED
            include/naucrates/base/CDatumBoolGPDB.h
            include/naucrates/base/CDatumGenericGPDB.h
            include/naucrates/base/CDatumInt2GPDB.h
            include/naucrates/base/CDatumInt4GPDB.h
            include/naucrates/base/CDatumInt8GPDB.h
            include/naucrates/base/CDatumOidGPDB.h
            include/naucrates/base/CQueryToDXLResult.h
            include/naucrates/base/IDatum.h
            include/naucrates/base/IDatumBool.h
            include/naucrates/base/IDatumGeneric.h
            include/naucrates/base/IDatumInt2.h
            include/naucrates/base/IDatumInt4.h
            include/naucrates/base/IDatumInt8.h
            include/naucrates/base/IDatumOid.h
            include/naucrates/base/IDatumStatisticsMappable.h
            include/naucrates/comm/CCommMessage.h
            include/naucrates/comm/CCommunicator.h
            include/naucrates/comm/CLoggerComm.h
            include/naucrates/dxl/CDXLUtils.h
            include/naucrates/dxl/CDXLUtils.inl
            include/naucrates/dxl/CIdGenerator.h
            include/naucrates/dxl/errorcodes.h
            include/naucrates/dxl/gpdb_types.h
            include/naucrates/dxl/operators/CDXLColDescr.h
            include/naucrates/dxl/operators/CDXLColRef.h
            include/naucrates/dxl/operators/CDXLCtasStorageOptions.h
            include/naucrates/dxl/operators/CDXLDatum.h
            include/naucrates/dxl/operators/CDXLDatumBool.h
            include/naucrates/dxl/operators/CDXLDatumGeneric.h
            include/naucrates/dxl/operators/CDXLDatumInt2.h
            include/naucrates/dxl/operators/CDXLDatumInt4.h
            include/naucrates/dxl/operators/CDXLDatumInt8.h
            include/naucrates/dxl/operators/CDXLDatumOid.h
            include/naucrates/dxl/operators/CDXLDatumStatsDoubleMappable.h
            include/naucrates/dxl/operators/CDXLDatumStatsLintMappable.h
            include/naucrates/dxl/operators/CDXLDirectDispatchInfo.h
            include/naucrates/dxl/operators/CDXLIndexDescr.h
            include/naucrates/dxl/operators/CDXLLogical.h
            include/naucrates/dxl/operators/CDXLLogicalConstTable.h
            include/naucrates/dxl/operators/CDXLLogicalCTAS.h
            include/naucrates/dxl/operators/CDXLLogicalCTEAnchor.h
            include/naucrates/dxl/operators/CDXLLogicalCTEConsumer.h
            include/naucrates/dxl/operators/CDXLLogicalCTEProducer.h
            include/naucrates/dxl/operators/CDXLLogicalDelete.h
            include/naucrates/dxl/operators/CDXLLogicalExternalGet.h
            include/naucrates/dxl/operators/CDXLLogicalGet.h
            include/naucrates/dxl/operators/CDXLLogicalGroupBy.h
            include/naucrates/dxl/operators/CDXLLogicalInsert.h
            include/naucrates/dxl/operators/CDXLLogicalJoin.h
            include/naucrates/dxl/operators/CDXLLogicalLimit.h
            include/naucrates/dxl/operators/CDXLLogicalProject.h
            include/naucrates/dxl/operators/CDXLLogicalSelect.h
            include/naucrates/dxl/operators/CDXLLogicalSetOp.h
            include/naucrates/dxl/operators/CDXLLogicalTVF.h
            include/naucrates/dxl/operators/CDXLLogicalUpdate.h
            include/naucrates/dxl/operators/CDXLLogicalWindow.h
            include/naucrates/dxl/operators/CDXLNode.h
            include/naucrates/dxl/operators/CDXLOperator.h
            include/naucrates/dxl/operators/CDXLOperatorCost.h
            include/naucrates/dxl/operators/CDXLOperatorFactory.h
            include/naucrates/dxl/operators/CDXLOperatorFactory.inl
            include/naucrates/dxl/operators/CDXLPhysical.h
            include/naucrates/dxl/operators/CDXLPhysicalAbstractBitmapScan.h
            include/naucrates/dxl/operators/CDXLPhysicalAgg.h
            include/naucrates/dxl/operators/CDXLPhysicalAppend.h
            include/naucrates/dxl/operators/CDXLPhysicalAssert.h
            include/naucrates/dxl/operators/CDXLPhysicalBitmapTableScan.h
            include/naucrates/dxl/operators/CDXLPhysicalBroadcastMotion.h
            include/naucrates/dxl/operators/CDXLPhysicalCTAS.h
            include/naucrates/dxl/operators/CDXLPhysicalCTEConsumer.h
            include/naucrates/dxl/operators/CDXLPhysicalCTEProducer.h
            include/naucrates/dxl/operators/CDXLPhysicalDML.h
            include/naucrates/dxl/operators/CDXLPhysicalDynamicBitmapTableScan.h
            include/naucrates/dxl/operators/CDXLPhysicalDynamicIndexScan.h
            include/naucrates/dxl/operators/CDXLPhysicalDynamicTableScan.h
            include/naucrates/dxl/operators/CDXLPhysicalExternalScan.h
            include/naucrates/dxl/operators/CDXLPhysicalGatherMotion.h
            include/naucrates/dxl/operators/CDXLPhysicalHashJoin.h
            include/naucrates/dxl/operators/CDXLPhysicalIndexOnlyScan.h
            include/naucrates/dxl/operators/CDXLPhysicalIndexScan.h
            include/naucrates/dxl/operators/CDXLPhysicalJoin.h
            include/naucrates/dxl/operators/CDXLPhysicalLimit.h
            include/naucrates/dxl/operators/CDXLPhysicalMaterialize.h
            include/naucrates/dxl/operators/CDXLPhysicalMergeJoin.h
            include/naucrates/dxl/operators/CDXLPhysicalMotion.h
            include/naucrates/dxl/operators/CDXLPhysicalNLJoin.h
            include/naucrates/dxl/operators/CDXLPhysicalPartitionSelector.h
            include/naucrates/dxl/operators/CDXLPhysicalProperties.h
            include/naucrates/dxl/operators/CDXLPhysicalRandomMotion.h
            include/naucrates/dxl/operators/CDXLPhysicalRedistributeMotion.h
            include/naucrates/dxl/operators/CDXLPhysicalResult.h
            include/naucrates/dxl/operators/CDXLPhysicalRoutedDistributeMotion.h
            include/naucrates/dxl/operators/CDXLPhysicalRowTrigger.h
            include/naucrates/dxl/operators/CDXLPhysicalSequence.h
            include/naucrates/dxl/operators/CDXLPhysicalSharedScan.h
            include/naucrates/dxl/operators/CDXLPhysicalSort.h
            include/naucrates/dxl/operators/CDXLPhysicalSplit.h
            include/naucrates/dxl/operators/CDXLPhysicalSubqueryScan.h
            include/naucrates/dxl/operators/CDXLPhysicalTableScan.h
            include/naucrates/dxl/operators/CDXLPhysicalTVF.h
            include/naucrates/dxl/operators/CDXLPhysicalWindow.h
            include/naucrates/dxl/operators/CDXLProperties.h
            include/naucrates/dxl/operators/CDXLScalar.h
            include/naucrates/dxl/operators/CDXLScalarAggref.h
            include/naucrates/dxl/operators/CDXLScalarArray.h
            include/naucrates/dxl/operators/CDXLScalarArrayComp.h
            include/naucrates/dxl/operators/CDXLScalarArrayRef.h
            include/naucrates/dxl/operators/CDXLScalarArrayRefIndexList.h
            include/naucrates/dxl/operators/CDXLScalarAssertConstraint.h
            include/naucrates/dxl/operators/CDXLScalarAssertConstraintList.h
            include/naucrates/dxl/operators/CDXLScalarBitmapBoolOp.h
            include/naucrates/dxl/operators/CDXLScalarBitmapIndexProbe.h
            include/naucrates/dxl/operators/CDXLScalarBooleanTest.h
            include/naucrates/dxl/operators/CDXLScalarBoolExpr.h
            include/naucrates/dxl/operators/CDXLScalarCaseTest.h
            include/naucrates/dxl/operators/CDXLScalarCast.h
            include/naucrates/dxl/operators/CDXLScalarCoalesce.h
            include/naucrates/dxl/operators/CDXLScalarCoerceToDomain.h
            include/naucrates/dxl/operators/CDXLScalarCoerceViaIO.h
            include/naucrates/dxl/operators/CDXLScalarComp.h
            include/naucrates/dxl/operators/CDXLScalarConstValue.h
            include/naucrates/dxl/operators/CDXLScalarDistinctComp.h
            include/naucrates/dxl/operators/CDXLScalarDMLAction.h
            include/naucrates/dxl/operators/CDXLScalarFilter.h
            include/naucrates/dxl/operators/CDXLScalarFuncExpr.h
            include/naucrates/dxl/operators/CDXLScalarHashCondList.h
            include/naucrates/dxl/operators/CDXLScalarHashExpr.h
            include/naucrates/dxl/operators/CDXLScalarHashExprList.h
            include/naucrates/dxl/operators/CDXLScalarIdent.h
            include/naucrates/dxl/operators/CDXLScalarIfStmt.h
            include/naucrates/dxl/operators/CDXLScalarIndexCondList.h
            include/naucrates/dxl/operators/CDXLScalarInitPlan.h
            include/naucrates/dxl/operators/CDXLScalarJoinFilter.h
            include/naucrates/dxl/operators/CDXLScalarLimitCount.h
            include/naucrates/dxl/operators/CDXLScalarLimitOffset.h
            include/naucrates/dxl/operators/CDXLScalarMergeCondList.h
            include/naucrates/dxl/operators/CDXLScalarMinMax.h
            include/naucrates/dxl/operators/CDXLScalarNullIf.h
            include/naucrates/dxl/operators/CDXLScalarNullTest.h
            include/naucrates/dxl/operators/CDXLScalarOneTimeFilter.h
            include/naucrates/dxl/operators/CDXLScalarOpExpr.h
            include/naucrates/dxl/operators/CDXLScalarOpList.h
            include/naucrates/dxl/operators/CDXLScalarPartBound.h
            include/naucrates/dxl/operators/CDXLScalarPartBoundInclusion.h
            include/naucrates/dxl/operators/CDXLScalarPartBoundOpen.h
            include/naucrates/dxl/operators/CDXLScalarPartDefault.h
            include/naucrates/dxl/operators/CDXLScalarPartOid.h
            include/naucrates/dxl/operators/CDXLScalarProjElem.h
            include/naucrates/dxl/operators/CDXLScalarProjList.h
            include/naucrates/dxl/operators/CDXLScalarRecheckCondFilter.h
            include/naucrates/dxl/operators/CDXLScalarSortCol.h
            include/naucrates/dxl/operators/CDXLScalarSortColList.h
            include/naucrates/dxl/operators/CDXLScalarSubPlan.h
            include/naucrates/dxl/operators/CDXLScalarSubquery.h
            include/naucrates/dxl/operators/CDXLScalarSubqueryAll.h
            include/naucrates/dxl/operators/CDXLScalarSubqueryAny.h
            include/naucrates/dxl/operators/CDXLScalarSubqueryExists.h
            include/naucrates/dxl/operators/CDXLScalarSubqueryNotExists.h
            include/naucrates/dxl/operators/CDXLScalarSubqueryQuantified.h
            include/naucrates/dxl/operators/CDXLScalarSwitch.h
            include/naucrates/dxl/operators/CDXLScalarSwitchCase.h
            include/naucrates/dxl/operators/CDXLScalarWindowFrameEdge.h
            include/naucrates/dxl/operators/CDXLScalarWindowRef.h
            include/naucrates/dxl/operators/CDXLSpoolInfo.h
            include/naucrates/dxl/operators/CDXLTableDescr.h
            include/naucrates/dxl/operators/CDXLWindowFrame.h
            include/naucrates/dxl/operators/CDXLWindowKey.h
            include/naucrates/dxl/operators/CDXLWindowSpec.h
            include/naucrates/dxl/operators/dxlops.h
            include/naucrates/dxl/parser/CParseHandlerAgg.h
            include/naucrates/dxl/parser/CParseHandlerAppend.h
            include/naucrates/dxl/parser/CParseHandlerArray.h
            include/naucrates/dxl/parser/CParseHandlerAssert.h
            include/naucrates/dxl/parser/CParseHandlerBase.h
            include/naucrates/dxl/parser/CParseHandlerBroadcastMotion.h
            include/naucrates/dxl/parser/CParseHandlerColDescr.h
            include/naucrates/dxl/parser/CParseHandlerColStats.h
            include/naucrates/dxl/parser/CParseHandlerColStatsBucket.h
            include/naucrates/dxl/parser/CParseHandlerCondList.h
            include/naucrates/dxl/parser/CParseHandlerCost.h
            include/naucrates/dxl/parser/CParseHandlerCostModel.h
            include/naucrates/dxl/parser/CParseHandlerCostParam.h
            include/naucrates/dxl/parser/CParseHandlerCostParams.h
            include/naucrates/dxl/parser/CParseHandlerCtasStorageOptions.h
            include/naucrates/dxl/parser/CParseHandlerCTEConfig.h
            include/naucrates/dxl/parser/CParseHandlerCTEList.h
            include/naucrates/dxl/parser/CParseHandlerDefaultValueExpr.h
            include/naucrates/dxl/parser/CParseHandlerDirectDispatchInfo.h
            include/naucrates/dxl/parser/CParseHandlerDistinctComp.h
            include/naucrates/dxl/parser/CParseHandlerDummy.h
            include/naucrates/dxl/parser/CParseHandlerDXL.h
            include/naucrates/dxl/parser/CParseHandlerDynamicIndexScan.h
            include/naucrates/dxl/parser/CParseHandlerDynamicTableScan.h
            include/naucrates/dxl/parser/CParseHandlerEnumeratorConfig.h
            include/naucrates/dxl/parser/CParseHandlerExternalScan.h
            include/naucrates/dxl/parser/CParseHandlerFactory.h
            include/naucrates/dxl/parser/CParseHandlerFilter.h
            include/naucrates/dxl/parser/CParseHandlerGatherMotion.h
            include/naucrates/dxl/parser/CParseHandlerGroupingColList.h
            include/naucrates/dxl/parser/CParseHandlerHashExpr.h
            include/naucrates/dxl/parser/CParseHandlerHashExprList.h
            include/naucrates/dxl/parser/CParseHandlerHashJoin.h
            include/naucrates/dxl/parser/CParseHandlerHint.h
            include/naucrates/dxl/parser/CParseHandlerIndexCondList.h
            include/naucrates/dxl/parser/CParseHandlerIndexDescr.h
            include/naucrates/dxl/parser/CParseHandlerIndexOnlyScan.h
            include/naucrates/dxl/parser/CParseHandlerIndexScan.h
            include/naucrates/dxl/parser/CParseHandlerLimit.h
            include/naucrates/dxl/parser/CParseHandlerLogicalConstTable.h
            include/naucrates/dxl/parser/CParseHandlerLogicalCTAS.h
            include/naucrates/dxl/parser/CParseHandlerLogicalCTEAnchor.h
            include/naucrates/dxl/parser/CParseHandlerLogicalCTEConsumer.h
            include/naucrates/dxl/parser/CParseHandlerLogicalCTEProducer.h
            include/naucrates/dxl/parser/CParseHandlerLogicalDelete.h
            include/naucrates/dxl/parser/CParseHandlerLogicalExternalGet.h
            include/naucrates/dxl/parser/CParseHandlerLogicalGet.h
            include/naucrates/dxl/parser/CParseHandlerLogicalGroupBy.h
            include/naucrates/dxl/parser/CParseHandlerLogicalInsert.h
            include/naucrates/dxl/parser/CParseHandlerLogicalJoin.h
            include/naucrates/dxl/parser/CParseHandlerLogicalLimit.h
            include/naucrates/dxl/parser/CParseHandlerLogicalOp.h
            include/naucrates/dxl/parser/CParseHandlerLogicalProject.h
            include/naucrates/dxl/parser/CParseHandlerLogicalSelect.h
            include/naucrates/dxl/parser/CParseHandlerLogicalSetOp.h
            include/naucrates/dxl/parser/CParseHandlerLogicalTVF.h
            include/naucrates/dxl/parser/CParseHandlerLogicalUpdate.h
            include/naucrates/dxl/parser/CParseHandlerLogicalWindow.h
            include/naucrates/dxl/parser/CParseHandlerManager.h
            include/naucrates/dxl/parser/CParseHandlerMaterialize.h
            include/naucrates/dxl/parser/CParseHandlerMDCast.h
            include/naucrates/dxl/parser/CParseHandlerMDGPDBAgg.h
            include/naucrates/dxl/parser/CParseHandlerMDGPDBCheckConstraint.h
            include/naucrates/dxl/parser/CParseHandlerMDGPDBFunc.h
            include/naucrates/dxl/parser/CParseHandlerMDGPDBScalarOp.h
            include/naucrates/dxl/parser/CParseHandlerMDGPDBTrigger.h
            include/naucrates/dxl/parser/CParseHandlerMDIndex.h
            include/naucrates/dxl/parser/CParseHandlerMDRelation.h
            include/naucrates/dxl/parser/CParseHandlerMDRelationCtas.h
            include/naucrates/dxl/parser/CParseHandlerMDRelationExternal.h
            include/naucrates/dxl/parser/CParseHandlerMDRequest.h
            include/naucrates/dxl/parser/CParseHandlerMDScCmp.h
            include/naucrates/dxl/parser/CParseHandlerMDType.h
            include/naucrates/dxl/parser/CParseHandlerMergeJoin.h
            include/naucrates/dxl/parser/CParseHandlerMetadata.h
            include/naucrates/dxl/parser/CParseHandlerMetadataColumn.h
            include/naucrates/dxl/parser/CParseHandlerMetadataColumns.h
            include/naucrates/dxl/parser/CParseHandlerMetadataIdList.h
            include/naucrates/dxl/parser/CParseHandlerMetadataObject.h
            include/naucrates/dxl/parser/CParseHandlerNLJoin.h
            include/naucrates/dxl/parser/CParseHandlerOp.h
            include/naucrates/dxl/parser/CParseHandlerOptimizerConfig.h
            include/naucrates/dxl/parser/CParseHandlerPartitionSelector.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalAbstractBitmapScan.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalBitmapTableScan.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalCTAS.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalCTEConsumer.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalCTEProducer.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalDML.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalDynamicBitmapTableScan.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalOp.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalRowTrigger.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalSplit.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalTVF.h
            include/naucrates/dxl/parser/CParseHandlerPhysicalWindow.h
            include/naucrates/dxl/parser/CParseHandlerPlan.h
            include/naucrates/dxl/parser/CParseHandlerProjElem.h
            include/naucrates/dxl/parser/CParseHandlerProjList.h
            include/naucrates/dxl/parser/CParseHandlerProperties.h
            include/naucrates/dxl/parser/CParseHandlerQuery.h
            include/naucrates/dxl/parser/CParseHandlerQueryOutput.h
            include/naucrates/dxl/parser/CParseHandlerRandomMotion.h
            include/naucrates/dxl/parser/CParseHandlerRedistributeMotion.h
            include/naucrates/dxl/parser/CParseHandlerRelStats.h
            include/naucrates/dxl/parser/CParseHandlerResult.h
            include/naucrates/dxl/parser/CParseHandlerRoutedMotion.h
            include/naucrates/dxl/parser/CParseHandlerScalarAggref.h
            include/naucrates/dxl/parser/CParseHandlerScalarArrayComp.h
            include/naucrates/dxl/parser/CParseHandlerScalarArrayRef.h
            include/naucrates/dxl/parser/CParseHandlerScalarArrayRefIndexList.h
            include/naucrates/dxl/parser/CParseHandlerScalarAssertConstraintList.h
            include/naucrates/dxl/parser/CParseHandlerScalarBitmapBoolOp.h
            include/naucrates/dxl/parser/CParseHandlerScalarBitmapIndexProbe.h
            include/naucrates/dxl/parser/CParseHandlerScalarBooleanTest.h
            include/naucrates/dxl/parser/CParseHandlerScalarBoolExpr.h
            include/naucrates/dxl/parser/CParseHandlerScalarCaseTest.h
            include/naucrates/dxl/parser/CParseHandlerScalarCast.h
            include/naucrates/dxl/parser/CParseHandlerScalarCoalesce.h
            include/naucrates/dxl/parser/CParseHandlerScalarCoerceToDomain.h
            include/naucrates/dxl/parser/CParseHandlerScalarCoerceViaIO.h
            include/naucrates/dxl/parser/CParseHandlerScalarComp.h
            include/naucrates/dxl/parser/CParseHandlerScalarConstValue.h
            include/naucrates/dxl/parser/CParseHandlerScalarDMLAction.h
            include/naucrates/dxl/parser/CParseHandlerScalarExpr.h
            include/naucrates/dxl/parser/CParseHandlerScalarFuncExpr.h
            include/naucrates/dxl/parser/CParseHandlerScalarIdent.h
            include/naucrates/dxl/parser/CParseHandlerScalarIfStmt.h
            include/naucrates/dxl/parser/CParseHandlerScalarInitPlan.h
            include/naucrates/dxl/parser/CParseHandlerScalarLimitCount.h
            include/naucrates/dxl/parser/CParseHandlerScalarLimitOffset.h
            include/naucrates/dxl/parser/CParseHandlerScalarMinMax.h
            include/naucrates/dxl/parser/CParseHandlerScalarNullIf.h
            include/naucrates/dxl/parser/CParseHandlerScalarNullTest.h
            include/naucrates/dxl/parser/CParseHandlerScalarOp.h
            include/naucrates/dxl/parser/CParseHandlerScalarOpExpr.h
            include/naucrates/dxl/parser/CParseHandlerScalarOpList.h
            include/naucrates/dxl/parser/CParseHandlerScalarPartBound.h
            include/naucrates/dxl/parser/CParseHandlerScalarPartBoundInclusion.h
            include/naucrates/dxl/parser/CParseHandlerScalarPartBoundOpen.h
            include/naucrates/dxl/parser/CParseHandlerScalarPartDefault.h
            include/naucrates/dxl/parser/CParseHandlerScalarPartOid.h
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlan.h
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlanParam.h
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlanParamList.h
            include/naucrates/dxl/parser/CParseHandlerScalarSubPlanTestExpr.h
            include/naucrates/dxl/parser/CParseHandlerScalarSubquery.h
            include/naucrates/dxl/parser/CParseHandlerScalarSubqueryExists.h
            include/naucrates/dxl/parser/CParseHandlerScalarSubqueryQuantified.h
            include/naucrates/dxl/parser/CParseHandlerScalarSwitch.h
            include/naucrates/dxl/parser/CParseHandlerScalarSwitchCase.h
            include/naucrates/dxl/parser/CParseHandlerScalarWindowFrameEdge.h
            include/naucrates/dxl/parser/CParseHandlerScalarWindowRef.h
            include/naucrates/dxl/parser/CParseHandlerSearchStage.h
            include/naucrates/dxl/parser/CParseHandlerSearchStrategy.h
            include/naucrates/dxl/parser/CParseHandlerSequence.h
            include/naucrates/dxl/parser/CParseHandlerSharedScan.h
            include/naucrates/dxl/parser/CParseHandlerSort.h
            include/naucrates/dxl/parser/CParseHandlerSortCol.h
            include/naucrates/dxl/parser/CParseHandlerSortColList.h
            include/naucrates/dxl/parser/CParseHandlerStacktrace.h
            include/naucrates/dxl/parser/CParseHandlerStatistics.h
            include/naucrates/dxl/parser/CParseHandlerStatisticsConfig.h
            include/naucrates/dxl/parser/CParseHandlerStatsBound.h
            include/naucrates/dxl/parser/CParseHandlerStatsDerivedColumn.h
            include/naucrates/dxl/parser/CParseHandlerStatsDerivedRelation.h
            include/naucrates/dxl/parser/CParseHandlerSubqueryScan.h
            include/naucrates/dxl/parser/CParseHandlerTableDescr.h
            include/naucrates/dxl/parser/CParseHandlerTableScan.h
            include/naucrates/dxl/parser/CParseHandlerTraceFlags.h
            include/naucrates/dxl/parser/CParseHandlerUtils.h
            include/naucrates/dxl/parser/CParseHandlerWindowFrame.h
            include/naucrates/dxl/parser/CParseHandlerWindowKey.h
            include/naucrates/dxl/parser/CParseHandlerWindowKeyList.h
            include/naucrates/dxl/parser/CParseHandlerWindowSpec.h
            include/naucrates/dxl/parser/CParseHandlerWindowSpecList.h
            include/naucrates/dxl/parser/CParseHandlerXform.h
            include/naucrates/dxl/parser/parsehandlers.h
            include/naucrates/dxl/xml/CDXLMemoryManager.h
            include/naucrates/dxl/xml/CDXLSections.h
            include/naucrates/dxl/xml/CXMLSerializer.h
            include/naucrates/dxl/xml/dxltokens.h
            include/naucrates/exception.h
            include/naucrates/init.h
            include/naucrates/md/CDXLBucket.h
            include/naucrates/md/CDXLColStats.h
            include/naucrates/md/CDXLRelStats.h
            include/naucrates/md/CDXLStatsDerivedColumn.h
            include/naucrates/md/CDXLStatsDerivedRelation.h
            include/naucrates/md/CGPDBTypeHelper.h
            include/naucrates/md/CGPDBTypeHelper.inl
            include/naucrates/md/CMDAggregateGPDB.h
            include/naucrates/md/CMDCastGPDB.h
            include/naucrates/md/CMDCheckConstraintGPDB.h
            include/naucrates/md/CMDColumn.h
            include/naucrates/md/CMDFunctionGPDB.h
            include/naucrates/md/CMDIdCast.h
            include/naucrates/md/CMDIdColStats.h
            include/naucrates/md/CMDIdGPDB.h
            include/naucrates/md/CMDIdGPDBCtas.h
            include/naucrates/md/CMDIdRelStats.h
            include/naucrates/md/CMDIdScCmp.h
            include/naucrates/md/CMDIndexGPDB.h
            include/naucrates/md/CMDName.h
            include/naucrates/md/CMDPartConstraintGPDB.h
            include/naucrates/md/CMDProviderComm.h
            include/naucrates/md/CMDProviderCommProxy.h
            include/naucrates/md/CMDProviderGeneric.h
            include/naucrates/md/CMDProviderMemory.h
            include/naucrates/md/CMDRelationCtasGPDB.h
            include/naucrates/md/CMDRelationExternalGPDB.h
            include/naucrates/md/CMDRelationGPDB.h
            include/naucrates/md/CMDRequest.h
            include/naucrates/md/CMDScalarOpGPDB.h
            include/naucrates/md/CMDScCmpGPDB.h
            include/naucrates/md/CMDTriggerGPDB.h
            include/naucrates/md/CMDTypeBoolGPDB.h
            include/naucrates/md/CMDTypeGenericGPDB.h
            include/naucrates/md/CMDTypeInt2GPDB.h
            include/naucrates/md/CMDTypeInt4GPDB.h
            include/naucrates/md/CMDTypeInt8GPDB.h
            include/naucrates/md/CMDTypeOidGPDB.h
            include/naucrates/md/CSystemId.h
            include/naucrates/md/IMDAggregate.h
            include/naucrates/md/IMDCacheObject.h
            include/naucrates/md/IMDCast.h
            include/naucrates/md/IMDCheckConstraint.h
            include/naucrates/md/IMDColStats.h
            include/naucrates/md/IMDColumn.h
            include/naucrates/md/IMDFunction.h
            include/naucrates/md/IMDId.h
            include/naucrates/md/IMDIndex.h
            include/naucrates/md/IMDInterface.h
            include/naucrates/md/IMDPartConstraint.h
            include/naucrates/md/IMDProvider.h
            include/naucrates/md/IMDRelation.h
            include/naucrates/md/IMDRelationCtas.h
            include/naucrates/md/IMDRelationExternal.h
            include/naucrates/md/IMDRelStats.h
            include/naucrates/md/IMDScalarOp.h
            include/naucrates/md/IMDScCmp.h
            include/naucrates/md/IMDTrigger.h
            include/naucrates/md/IMDType.h
            include/naucrates/md/IMDTypeBool.h
            include/naucrates/md/IMDTypeGeneric.h
            include/naucrates/md/IMDTypeInt2.h
            include/naucrates/md/IMDTypeInt4.h
            include/naucrates/md/IMDTypeInt8.h
            include/naucrates/md/IMDTypeOid.h
            include/naucrates/statistics/CBucket.h
            include/naucrates/statistics/CHistogram.h
            include/naucrates/statistics/CPoint.h
            include/naucrates/statistics/CScaleFactorUtils.h
            include/naucrates/statistics/CStatistics.h
            include/naucrates/statistics/CStatisticsJoin.h
            include/naucrates/statistics/CStatisticsUtils.h
            include/naucrates/statistics/CStatsPred.h
            include/naucrates/statistics/CStatsPredConj.h
            include/naucrates/statistics/CStatsPredDisj.h
            include/naucrates/statistics/CStatsPredLike.h
            include/naucrates/statistics/CStatsPredPoint.h
            include/naucrates/statistics/CStatsPredUnsupported.h
            include/naucrates/statistics/CStatsPredUtils.h
            include/naucrates/statistics/CUpperBoundNDVs.h
            include/naucrates/statistics/IBucket.h
            include/naucrates/statistics/IStatistics.h
            include/naucrates/traceflags/traceflags.h

            src/CDXLUtils.cpp
            src/CIdGenerator.cpp
            src/exception.cpp
            src/init.cpp
            src/traceflags.cpp
            src/base/CDatumBoolGPDB.cpp
            src/base/CDatumGenericGPDB.cpp
            src/base/CDatumInt2GPDB.cpp
            src/base/CDatumInt4GPDB.cpp
            src/base/CDatumInt8GPDB.cpp
            src/base/CDatumOidGPDB.cpp
            src/base/CQueryToDXLResult.cpp
            src/base/IDatumStatisticsMappable.cpp
            src/comm/CCommunicator.cpp
            src/comm/CLoggerComm.cpp
            src/md/CDXLBucket.cpp
            src/md/CDXLColStats.cpp
            src/md/CDXLRelStats.cpp
            src/md/CDXLStatsDerivedColumn.cpp
            src/md/CDXLStatsDerivedRelation.cpp
            src/md/CMDAggregateGPDB.cpp
            src/md/CMDCastGPDB.cpp
            src/md/CMDCheckConstraintGPDB.cpp
            src/md/CMDColumn.cpp
            src/md/CMDFunctionGPDB.cpp
            src/md/CMDIdCast.cpp
            src/md/CMDIdColStats.cpp
            src/md/CMDIdGPDB.cpp
            src/md/CMDIdGPDBCtas.cpp
            src/md/CMDIdRelStats.cpp
            src/md/CMDIdScCmp.cpp
            src/md/CMDIndexGPDB.cpp
            src/md/CMDName.cpp
            src/md/CMDPartConstraintGPDB.cpp
            src/md/CMDProviderComm.cpp
            src/md/CMDProviderCommProxy.cpp
            src/md/CMDProviderGeneric.cpp
            src/md/CMDProviderMemory.cpp
            src/md/CMDRelationCtasGPDB.cpp
            src/md/CMDRelationExternalGPDB.cpp
            src/md/CMDRelationGPDB.cpp
            src/md/CMDRequest.cpp
            src/md/CMDScalarOpGPDB.cpp
            src/md/CMDScCmpGPDB.cpp
            src/md/CMDTriggerGPDB.cpp
            src/md/CMDTypeBoolGPDB.cpp
            src/md/CMDTypeGenericGPDB.cpp
            src/md/CMDTypeInt2GPDB.cpp
            src/md/CMDTypeInt4GPDB.cpp
            src/md/CMDTypeInt8GPDB.cpp
            src/md/CMDTypeOidGPDB.cpp
            src/md/CSystemId.cpp
            src/md/IMDCacheObject.cpp
            src/md/IMDIndex.cpp
            src/md/IMDProvider.cpp
            src/md/IMDRelation.cpp
            src/md/IMDType.cpp
            src/operators/CDXLColDescr.cpp
            src/operators/CDXLColRef.cpp
            src/operators/CDXLCtasStorageOptions.cpp
            src/operators/CDXLDatum.cpp
            src/operators/CDXLDatumBool.cpp
            src/operators/CDXLDatumGeneric.cpp
            src/operators/CDXLDatumInt2.cpp
            src/operators/CDXLDatumInt4.cpp
            src/operators/CDXLDatumInt8.cpp
            src/operators/CDXLDatumOid.cpp
            src/operators/CDXLDatumStatsDoubleMappable.cpp
            src/operators/CDXLDatumStatsLintMappable.cpp
            src/operators/CDXLDirectDispatchInfo.cpp
            src/operators/CDXLIndexDescr.cpp
            src/operators/CDXLLogical.cpp
            src/operators/CDXLLogicalConstTable.cpp
            src/operators/CDXLLogicalCTAS.cpp
            src/operators/CDXLLogicalCTEAnchor.cpp
            src/operators/CDXLLogicalCTEConsumer.cpp
            src/operators/CDXLLogicalCTEProducer.cpp
            src/operators/CDXLLogicalDelete.cpp
            src/operators/CDXLLogicalExternalGet.cpp
            src/operators/CDXLLogicalGet.cpp
            src/operators/CDXLLogicalGroupBy.cpp
            src/operators/CDXLLogicalInsert.cpp
            src/operators/CDXLLogicalJoin.cpp
            src/operators/CDXLLogicalLimit.cpp
            src/operators/CDXLLogicalProject.cpp
            src/operators/CDXLLogicalSelect.cpp
            src/operators/CDXLLogicalSetOp.cpp
            src/operators/CDXLLogicalTVF.cpp
            src/operators/CDXLLogicalUpdate.cpp
            src/operators/CDXLLogicalWindow.cpp
            src/operators/CDXLNode.cpp
            src/operators/CDXLOperator.cpp
            src/operators/CDXLOperatorCost.cpp
            src/operators/CDXLOperatorFactory.cpp
            src/operators/CDXLPhysical.cpp
            src/operators/CDXLPhysicalAbstractBitmapScan.cpp
            src/operators/CDXLPhysicalAgg.cpp
            src/operators/CDXLPhysicalAppend.cpp
            src/operators/CDXLPhysicalAssert.cpp
            src/operators/CDXLPhysicalBitmapTableScan.cpp
            src/operators/CDXLPhysicalBroadcastMotion.cpp
            src/operators/CDXLPhysicalCTAS.cpp
            src/operators/CDXLPhysicalCTEConsumer.cpp
            src/operators/CDXLPhysicalCTEProducer.cpp
            src/operators/CDXLPhysicalDML.cpp
            src/operators/CDXLPhysicalDynamicBitmapTableScan.cpp
            src/operators/CDXLPhysicalDynamicIndexScan.cpp
            src/operators/CDXLPhysicalDynamicTableScan.cpp
            src/operators/CDXLPhysicalExternalScan.cpp
            src/operators/CDXLPhysicalGatherMotion.cpp
            src/operators/CDXLPhysicalHashJoin.cpp
            src/operators/CDXLPhysicalIndexOnlyScan.cpp
            src/operators/CDXLPhysicalIndexScan.cpp
            src/operators/CDXLPhysicalJoin.cpp
            src/operators/CDXLPhysicalLimit.cpp
            src/operators/CDXLPhysicalMaterialize.cpp
            src/operators/CDXLPhysicalMergeJoin.cpp
            src/operators/CDXLPhysicalMotion.cpp
            src/operators/CDXLPhysicalNLJoin.cpp
            src/operators/CDXLPhysicalPartitionSelector.cpp
            src/operators/CDXLPhysicalProperties.cpp
            src/operators/CDXLPhysicalRandomMotion.cpp
            src/operators/CDXLPhysicalRedistributeMotion.cpp
            src/operators/CDXLPhysicalResult.cpp
            src/operators/CDXLPhysicalRoutedDistributeMotion.cpp
            src/operators/CDXLPhysicalRowTrigger.cpp
            src/operators/CDXLPhysicalSequence.cpp
            src/operators/CDXLPhysicalSharedScan.cpp
            src/operators/CDXLPhysicalSort.cpp
            src/operators/CDXLPhysicalSplit.cpp
            src/operators/CDXLPhysicalSubqueryScan.cpp
            src/operators/CDXLPhysicalTableScan.cpp
            src/operators/CDXLPhysicalTVF.cpp
            src/operators/CDXLPhysicalWindow.cpp
            src/operators/CDXLProperties.cpp
            src/operators/CDXLScalar.cpp
            src/operators/CDXLScalarAggref.cpp
            src/operators/CDXLScalarArray.cpp
            src/operators/CDXLScalarArrayComp.cpp
            src/operators/CDXLScalarArrayRef.cpp
            src/operators/CDXLScalarArrayRefIndexList.cpp
            src/operators/CDXLScalarAssertConstraint.cpp
            src/operators/CDXLScalarAssertConstraintList.cpp
            src/operators/CDXLScalarBitmapBoolOp.cpp
            src/operators/CDXLScalarBitmapIndexProbe.cpp
            src/operators/CDXLScalarBooleanTest.cpp
            src/operators/CDXLScalarBoolExpr.cpp
            src/operators/CDXLScalarCaseTest.cpp
            src/operators/CDXLScalarCast.cpp
            src/operators/CDXLScalarCoalesce.cpp
            src/operators/CDXLScalarCoerceToDomain.cpp
            src/operators/CDXLScalarCoerceViaIO.cpp
            src/operators/CDXLScalarComp.cpp
            src/operators/CDXLScalarConstValue.cpp
            src/operators/CDXLScalarDistinctComp.cpp
            src/operators/CDXLScalarDMLAction.cpp
            src/operators/CDXLScalarFilter.cpp
            src/operators/CDXLScalarFuncExpr.cpp
            src/operators/CDXLScalarHashCondList.cpp
            src/operators/CDXLScalarHashExpr.cpp
            src/operators/CDXLScalarHashExprList.cpp
            src/operators/CDXLScalarIdent.cpp
            src/operators/CDXLScalarIfStmt.cpp
            src/operators/CDXLScalarIndexCondList.cpp
            src/operators/CDXLScalarInitPlan.cpp
            src/operators/CDXLScalarJoinFilter.cpp
            src/operators/CDXLScalarLimitCount.cpp
            src/operators/CDXLScalarLimitOffset.cpp
            src/operators/CDXLScalarMergeCondList.cpp
            src/operators/CDXLScalarMinMax.cpp
            src/operators/CDXLScalarNullIf.cpp
            src/operators/CDXLScalarNullTest.cpp
            src/operators/CDXLScalarOneTimeFilter.cpp
            src/operators/CDXLScalarOpExpr.cpp
            src/operators/CDXLScalarOpList.cpp
            src/operators/CDXLScalarPartBound.cpp
            src/operators/CDXLScalarPartBoundInclusion.cpp
            src/operators/CDXLScalarPartBoundOpen.cpp
            src/operators/CDXLScalarPartDefault.cpp
            src/operators/CDXLScalarPartOid.cpp
            src/operators/CDXLScalarProjElem.cpp
            src/operators/CDXLScalarProjList.cpp
            src/operators/CDXLScalarRecheckCondFilter.cpp
            src/operators/CDXLScalarSortCol.cpp
            src/operators/CDXLScalarSortColList.cpp
            src/operators/CDXLScalarSubPlan.cpp
            src/operators/CDXLScalarSubquery.cpp
            src/operators/CDXLScalarSubqueryAll.cpp
            src/operators/CDXLScalarSubqueryAny.cpp
            src/operators/CDXLScalarSubqueryExists.cpp
            src/operators/CDXLScalarSubqueryNotExists.cpp
            src/operators/CDXLScalarSubqueryQuantified.cpp
            src/operators/CDXLScalarSwitch.cpp
            src/operators/CDXLScalarSwitchCase.cpp
            src/operators/CDXLScalarWindowFrameEdge.cpp
            src/operators/CDXLScalarWindowRef.cpp
            src/operators/CDXLSpoolInfo.cpp
            src/operators/CDXLTableDescr.cpp
            src/operators/CDXLWindowFrame.cpp
            src/operators/CDXLWindowKey.cpp
            src/operators/CDXLWindowSpec.cpp
            src/parser/CParseHandlerAgg.cpp
            src/parser/CParseHandlerAppend.cpp
            src/parser/CParseHandlerArray.cpp
            src/parser/CParseHandlerAssert.cpp
            src/parser/CParseHandlerBase.cpp
            src/parser/CParseHandlerBroadcastMotion.cpp
            src/parser/CParseHandlerColDescr.cpp
            src/parser/CParseHandlerColStats.cpp
            src/parser/CParseHandlerColStatsBucket.cpp
            src/parser/CParseHandlerCondList.cpp
            src/parser/CParseHandlerCost.cpp
            src/parser/CParseHandlerCostModel.cpp
            src/parser/CParseHandlerCostParam.cpp
            src/parser/CParseHandlerCostParams.cpp
            src/parser/CParseHandlerCtasStorageOptions.cpp
            src/parser/CParseHandlerCTEConfig.cpp
            src/parser/CParseHandlerCTEList.cpp
            src/parser/CParseHandlerDefaultValueExpr.cpp
            src/parser/CParseHandlerDirectDispatchInfo.cpp
            src/parser/CParseHandlerDistinctComp.cpp
            src/parser/CParseHandlerDummy.cpp
            src/parser/CParseHandlerDXL.cpp
            src/parser/CParseHandlerDynamicIndexScan.cpp
            src/parser/CParseHandlerDynamicTableScan.cpp
            src/parser/CParseHandlerEnumeratorConfig.cpp
            src/parser/CParseHandlerExternalScan.cpp
            src/parser/CParseHandlerFactory.cpp
            src/parser/CParseHandlerFilter.cpp
            src/parser/CParseHandlerGatherMotion.cpp
            src/parser/CParseHandlerGroupingColList.cpp
            src/parser/CParseHandlerHashExpr.cpp
            src/parser/CParseHandlerHashExprList.cpp
            src/parser/CParseHandlerHashJoin.cpp
            src/parser/CParseHandlerHint.cpp
            src/parser/CParseHandlerIndexCondList.cpp
            src/parser/CParseHandlerIndexDescr.cpp
            src/parser/CParseHandlerIndexOnlyScan.cpp
            src/parser/CParseHandlerIndexScan.cpp
            src/parser/CParseHandlerLimit.cpp
            src/parser/CParseHandlerLogicalConstTable.cpp
            src/parser/CParseHandlerLogicalCTAS.cpp
            src/parser/CParseHandlerLogicalCTEAnchor.cpp
            src/parser/CParseHandlerLogicalCTEConsumer.cpp
            src/parser/CParseHandlerLogicalCTEProducer.cpp
            src/parser/CParseHandlerLogicalDelete.cpp
            src/parser/CParseHandlerLogicalExternalGet.cpp
            src/parser/CParseHandlerLogicalGet.cpp
            src/parser/CParseHandlerLogicalGroupBy.cpp
            src/parser/CParseHandlerLogicalInsert.cpp
            src/parser/CParseHandlerLogicalJoin.cpp
            src/parser/CParseHandlerLogicalLimit.cpp
            src/parser/CParseHandlerLogicalOp.cpp
            src/parser/CParseHandlerLogicalProject.cpp
            src/parser/CParseHandlerLogicalSelect.cpp
            src/parser/CParseHandlerLogicalSetOp.cpp
            src/parser/CParseHandlerLogicalTVF.cpp
            src/parser/CParseHandlerLogicalUpdate.cpp
            src/parser/CParseHandlerLogicalWindow.cpp
            src/parser/CParseHandlerManager.cpp
            src/parser/CParseHandlerMaterialize.cpp
            src/parser/CParseHandlerMDCast.cpp
            src/parser/CParseHandlerMDGPDBAgg.cpp
            src/parser/CParseHandlerMDGPDBCheckConstraint.cpp
            src/parser/CParseHandlerMDGPDBFunc.cpp
            src/parser/CParseHandlerMDGPDBScalarOp.cpp
            src/parser/CParseHandlerMDGPDBTrigger.cpp
            src/parser/CParseHandlerMDIndex.cpp
            src/parser/CParseHandlerMDRelation.cpp
            src/parser/CParseHandlerMDRelationCtas.cpp
            src/parser/CParseHandlerMDRelationExternal.cpp
            src/parser/CParseHandlerMDRequest.cpp
            src/parser/CParseHandlerMDScCmp.cpp
            src/parser/CParseHandlerMDType.cpp
            src/parser/CParseHandlerMergeJoin.cpp
            src/parser/CParseHandlerMetadata.cpp
            src/parser/CParseHandlerMetadataColumn.cpp
            src/parser/CParseHandlerMetadataColumns.cpp
            src/parser/CParseHandlerMetadataIdList.cpp
            src/parser/CParseHandlerMetadataObject.cpp
            src/parser/CParseHandlerNLJoin.cpp
            src/parser/CParseHandlerOp.cpp
            src/parser/CParseHandlerOptimizerConfig.cpp
            src/parser/CParseHandlerPartitionSelector.cpp
            src/parser/CParseHandlerPhysicalAbstractBitmapScan.cpp
            src/parser/CParseHandlerPhysicalBitmapTableScan.cpp
            src/parser/CParseHandlerPhysicalCTAS.cpp
            src/parser/CParseHandlerPhysicalCTEConsumer.cpp
            src/parser/CParseHandlerPhysicalCTEProducer.cpp
            src/parser/CParseHandlerPhysicalDML.cpp
            src/parser/CParseHandlerPhysicalDynamicBitmapTableScan.cpp
            src/parser/CParseHandlerPhysicalOp.cpp
            src/parser/CParseHandlerPhysicalRowTrigger.cpp
            src/parser/CParseHandlerPhysicalSplit.cpp
            src/parser/CParseHandlerPhysicalTVF.cpp
            src/parser/CParseHandlerPhysicalWindow.cpp
            src/parser/CParseHandlerPlan.cpp
            src/parser/CParseHandlerProjElem.cpp
            src/parser/CParseHandlerProjList.cpp
            src/parser/CParseHandlerProperties.cpp
            src/parser/CParseHandlerQuery.cpp
            src/parser/CParseHandlerQueryOutput.cpp
            src/parser/CParseHandlerRandomMotion.cpp
            src/parser/CParseHandlerRedistributeMotion.cpp
            src/parser/CParseHandlerRelStats.cpp
            src/parser/CParseHandlerResult.cpp
            src/parser/CParseHandlerRoutedMotion.cpp
            src/parser/CParseHandlerScalarAggref.cpp
            src/parser/CParseHandlerScalarArrayComp.cpp
            src/parser/CParseHandlerScalarArrayRef.cpp
            src/parser/CParseHandlerScalarArrayRefIndexList.cpp
            src/parser/CParseHandlerScalarAssertConstraintList.cpp
            src/parser/CParseHandlerScalarBitmapBoolOp.cpp
            src/parser/CParseHandlerScalarBitmapIndexProbe.cpp
            src/parser/CParseHandlerScalarBooleanTest.cpp
            src/parser/CParseHandlerScalarBoolExpr.cpp
            src/parser/CParseHandlerScalarCaseTest.cpp
            src/parser/CParseHandlerScalarCast.cpp
            src/parser/CParseHandlerScalarCoalesce.cpp
            src/parser/CParseHandlerScalarCoerceToDomain.cpp
            src/parser/CParseHandlerScalarCoerceViaIO.cpp
            src/parser/CParseHandlerScalarComp.cpp
            src/parser/CParseHandlerScalarConstValue.cpp
            src/parser/CParseHandlerScalarDMLAction.cpp
            src/parser/CParseHandlerScalarExpr.cpp
            src/parser/CParseHandlerScalarFuncExpr.cpp
            src/parser/CParseHandlerScalarIdent.cpp
            src/parser/CParseHandlerScalarIfStmt.cpp
            src/parser/CParseHandlerScalarInitPlan.cpp
            src/parser/CParseHandlerScalarLimitCount.cpp
            src/parser/CParseHandlerScalarLimitOffset.cpp
            src/parser/CParseHandlerScalarMinMax.cpp
            src/parser/CParseHandlerScalarNullIf.cpp
            src/parser/CParseHandlerScalarNullTest.cpp
            src/parser/CParseHandlerScalarOp.cpp
            src/parser/CParseHandlerScalarOpExpr.cpp
            src/parser/CParseHandlerScalarOpList.cpp
            src/parser/CParseHandlerScalarPartBound.cpp
            src/parser/CParseHandlerScalarPartBoundInclusion.cpp
            src/parser/CParseHandlerScalarPartBoundOpen.cpp
            src/parser/CParseHandlerScalarPartDefault.cpp
            src/parser/CParseHandlerScalarPartOid.cpp
            src/parser/CParseHandlerScalarSubPlan.cpp
            src/parser/CParseHandlerScalarSubPlanParam.cpp
            src/parser/CParseHandlerScalarSubPlanParamList.cpp
            src/parser/CParseHandlerScalarSubPlanTestExpr.cpp
            src/parser/CParseHandlerScalarSubquery.cpp
            src/parser/CParseHandlerScalarSubqueryExists.cpp
            src/parser/CParseHandlerScalarSubqueryQuantified.cpp
            src/parser/CParseHandlerScalarSwitch.cpp
            src/parser/CParseHandlerScalarSwitchCase.cpp
            src/parser/CParseHandlerScalarWindowFrameEdge.cpp
            src/parser/CParseHandlerScalarWindowRef.cpp
            src/parser/CParseHandlerSearchStage.cpp
            src/parser/CParseHandlerSearchStrategy.cpp
            src/parser/CParseHandlerSequence.cpp
            src/parser/CParseHandlerSharedScan.cpp
            src/parser/CParseHandlerSort.cpp
            src/parser/CParseHandlerSortCol.cpp
            src/parser/CParseHandlerSortColList.cpp
            src/parser/CParseHandlerStackTrace.cpp
            src/parser/CParseHandlerStatistics.cpp
            src/parser/CParseHandlerStatisticsConfig.cpp
            src/parser/CParseHandlerStatsBound.cpp
            src/parser/CParseHandlerStatsDerivedColumn.cpp
            src/parser/CParseHandlerStatsDerivedRelation.cpp
            src/parser/CParseHandlerSubqueryScan.cpp
            src/parser/CParseHandlerTableDescr.cpp
            src/parser/CParseHandlerTableScan.cpp
            src/parser/CParseHandlerTraceFlags.cpp
            src/parser/CParseHandlerUtils.cpp
            src/parser/CParseHandlerWindowFrame.cpp
            src/parser/CParseHandlerWindowKey.cpp
            src/parser/CParseHandlerWindowKeyList.cpp
            src/parser/CParseHandlerWindowSpec.cpp
            src/parser/CParseHandlerWindowSpecList.cpp
            src/parser/CParseHandlerXform.cpp
            src/statistics/CBucket.cpp
            src/statistics/CHistogram.cpp
            src/statistics/CPoint.cpp
            src/statistics/CScaleFactorUtils.cpp
            src/statistics/CStatistics.cpp
            src/statistics/CStatisticsUtils.cpp
            src/statistics/CStatsPredConj.cpp
            src/statistics/CStatsPredDisj.cpp
            src/statistics/CStatsPredLike.cpp
            src/statistics/CStatsPredPoint.cpp
            src/statistics/CStatsPredUnsupported.cpp
            src/statistics/CStatsPredUtils.cpp
            src/statistics/CUpperBoundNDVs.cpp
            src/xml/CDXLMemoryManager.cpp
            src/xml/CDXLSections.cpp
            src/xml/CXMLSerializer.cpp
            src/xml/dxltokens.cpp)

target_link_libraries(naucrates
                      ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS}
                      ${GPOS_LIBRARIES}
                      ${XERCES_LIBRARIES}
                      ${GPORCA_SOLARIS_EXTRA_LIBS})

# Prevent linker errors from undefined symbols on OSX.
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  set_target_properties(naucrates PROPERTIES
                        LINK_FLAGS "-undefined dynamic_lookup")
endif()

set_target_properties(naucrates PROPERTIES
                      SOVERSION ${GPORCA_ABI_VERSION}
                      VERSION ${GPORCA_VERSION_STRING})

install(TARGETS naucrates DESTINATION lib)
install(DIRECTORY include/naucrates DESTINATION include)
